--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <!-- SEO-секция-->
     <meta
       name="description"
-      content="Свяжитесь с нами для покупки средств для роста волос. WhatsApp, Telegram, доставка по России. Отзывы покупателей."
+      content="Свяжитесь со мной для покупки средств для роста волос. WhatsApp, Telegram, доставка по России. Отзывы покупателей."
     />
     <meta property="og:title" content="Контакты и покупка | Андрей Борода" />
     <meta
@@ -79,7 +79,7 @@
         <div class="col-12">
           <div class="card contact-card">
             <div class="card-body p-4">
-              <h3 class="card-title mb-4 text-primary">Свяжитесь с нами</h3>
+              <h3 class="card-title mb-4 text-primary">Свяжитесь со мной</h3>
               <div class="row g-3">
                 <div class="col-md-6">
                   <div
@@ -180,7 +180,7 @@
         <div class="col-12">
           <div class="card contact-card">
             <div class="card-body p-4">
-              <h3 class="card-title mb-4 text-primary">Наши маркетплейсы</h3>
+              <h3 class="card-title mb-4 text-primary">Мои маркетплейсы</h3>
               <div class="row g-3">
                 <div class="col-md-6">
                   <a
@@ -192,7 +192,7 @@
                     <div class="d-flex align-items-center">
                       <i class="bi bi-shop fs-3 text-danger me-3"></i>
                       <div>
-                        <strong>Avito - 60мл оригинал</strong>
+                        <strong>Avito - Оригинальный Kirkland Signature Minoxidil 5%, 60 мл</strong>
                         <div class="text-muted">Оригинальный флакон</div>
                       </div>
                     </div>
@@ -208,7 +208,7 @@
                     <div class="d-flex align-items-center">
                       <i class="bi bi-shop fs-3 text-danger me-3"></i>
                       <div>
-                        <strong>Avito - 100мл</strong>
+                        <strong>Avito - Капиксил М 5%, 100 мл</strong>
                         <div class="text-muted">
                           С моей этикеткой "Андрей Борода"
                         </div>
@@ -226,7 +226,7 @@
                     <div class="d-flex align-items-center">
                       <i class="bi bi-basket fs-3 wb-icon"></i>
                       <div>
-                        <strong>Wildberries - 100 мл</strong>
+                        <strong>Wildberries - Капиксил М 5%, 100 мл</strong>
                         <div class="text-muted">Официальный магазин</div>
                       </div>
                     </div>
@@ -242,7 +242,7 @@
                     <div class="d-flex align-items-center">
                       <i class="bi bi-box-seam fs-3 text-info me-3"></i>
                       <div>
-                        <strong>OZON - 100 мл</strong>
+                        <strong>OZON - Капиксил М 5%, 100 мл</strong>
                         <div class="text-muted">Официальный магазин</div>
                       </div>
                     </div>
@@ -270,3 +270,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
