--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       content="https://andrey-beard.github.io/beard-shop/index.html"
     />
 
+    <!-- Google Search Console -->
+    <meta
+      name="google-site-verification"
+      content="XKQKg-8moV4NmLYO1UjXNJIc0DqUzYsltxekP5UfEiQ"
+    />
+    
     <title>Андрей Борода - Главная</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link
@@ -226,4 +232,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+
 </html>
