--- a/contacts.html
+++ b/contacts.html
@@ -130,7 +130,7 @@
             <div class="card-body p-4 text-center">
               <h3 class="card-title mb-3 text-primary">Отзывы покупателей</h3>
               <p class="card-text mb-3 fs-6">
-                Посмотрите реальные отзывы от наших покупателей
+                Посмотрите реальные отзывы от покупателей
               </p>
               <a
                 href="https://t.me/andrey_boroda_minoxidil"
@@ -139,6 +139,14 @@
                 rel="noopener"
               >
                 <i class="bi bi-telegram me-2"></i>Читать отзывы в Telegram
+              </a>
+              <a
+                href="https://www.youtube.com/@Andrey_boroda_life"
+                class="btn btn-danger btn-lg px-4"
+                target="_blank"
+                rel="noopener"
+              >
+                  <i class="bi bi-youtube me-2"></i>YouTube канал
               </a>
             </div>
           </div>
@@ -270,4 +278,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
 
