--- a/contacts.html
+++ b/contacts.html
@@ -54,6 +54,20 @@
       footer {
         margin-top: auto;
       }
+      .btn-group-custom {
+        display: flex;
+        gap: 1rem;
+        justify-content: center;
+      }
+      @media (max-width: 768px) {
+        .btn-group-custom {
+          flex-direction: column;
+          gap: 0.75rem;
+        }
+        .btn-group-custom .btn {
+          width: 100%;
+        }
+      }
     </style>
   </head>
   <body class="d-flex flex-column min-vh-100">
@@ -132,22 +146,24 @@
               <p class="card-text mb-3 fs-6">
                 Посмотрите реальные отзывы от покупателей
               </p>
-              <a
-                href="https://t.me/andrey_boroda_minoxidil"
-                class="btn btn-primary btn-lg px-4"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="bi bi-telegram me-2"></i>Читать отзывы в Telegram
-              </a>
-              <a
-                href="https://www.youtube.com/@Andrey_boroda_life"
-                class="btn btn-danger btn-lg px-4"
-                target="_blank"
-                rel="noopener"
-              >
+              <div class="btn-group-custom">
+                <a
+                  href="https://t.me/andrey_boroda_minoxidil"
+                  class="btn btn-primary btn-lg px-4"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <i class="bi bi-telegram me-2"></i>Отзывы в Telegram
+                </a>
+                <a
+                  href="https://www.youtube.com/@Andrey_boroda_life"
+                  class="btn btn-danger btn-lg px-4"
+                  target="_blank"
+                  rel="noopener"
+                >
                   <i class="bi bi-youtube me-2"></i>YouTube канал
-              </a>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -200,7 +216,10 @@
                     <div class="d-flex align-items-center">
                       <i class="bi bi-shop fs-3 text-danger me-3"></i>
                       <div>
-                        <strong>Avito - Оригинальный Kirkland Signature Minoxidil 5%, 60 мл</strong>
+                        <strong
+                          >Avito - Оригинальный Kirkland Signature Minoxidil 5%,
+                          60 мл</strong
+                        >
                         <div class="text-muted">Оригинальный флакон</div>
                       </div>
                     </div>
@@ -278,5 +297,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
-
