--- a/contacts.html
+++ b/contacts.html
@@ -19,6 +19,16 @@
       content="https://andrey-beard.github.io/beard-shop/contacts.html"
     />
 
+    <!-- Гео-метатеги -->
+    <meta name="geo.region" content="RU-AST" />
+    <meta name="geo.placename" content="Астрахань" />
+    <meta name="geo.position" content="46.335454;48.034518" />
+    <meta name="ICBM" content="46.335454, 48.034518" />
+
+    <!-- Язык -->
+    <meta http-equiv="Content-Language" content="ru" />
+    <meta name="language" content="Russian" />
+
     <title>Контакты - Андрей Борода</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link
