--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
       name="google-site-verification"
       content="XKQKg-8moV4NmLYO1UjXNJIc0DqUzYsltxekP5UfEiQ"
     />
-    
+
+    <!-- Гео-метатеги -->
+    <meta name="geo.region" content="RU-AST" />
+    <meta name="geo.placename" content="Астрахань" />
+    <meta name="geo.position" content="46.335454;48.034518" />
+    <meta name="ICBM" content="46.335454, 48.034518" />
+
+    <!-- Язык -->
+    <meta http-equiv="Content-Language" content="ru" />
+    <meta name="language" content="Russian" />
+
     <title>Андрей Борода - Главная</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -232,5 +242,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-
 </html>
