--- a/products.html
+++ b/products.html
@@ -84,7 +84,7 @@
 
     <!-- Основной контент -->
     <div class="container my-5 flex-grow-1">
-      <h1 class="text-center mb-5 display-5 fw-bold text-dark">Наши товары</h1>
+      <h1 class="text-center mb-5 display-5 fw-bold text-dark">Товары</h1>
 
       <div class="row g-4" id="productsGrid">
         <!-- Карточки грузятся через JS -->
@@ -97,7 +97,11 @@
         <div class="row">
           <div class="col-12 text-center">
             <p class="mb-1">ИП Хасанов Андрей Андреевич</p>
-            <p class="mb-0">323300000021625</p>
+            <p class="mb-2">323300000021625</p>
+            <p class="mb-0 small text-muted">
+              Имеются противопоказания. Перед применением проконсультируйтесь со
+              специалистом
+            </p>
           </div>
         </div>
       </div>
