--- a/index.html
+++ b/index.html
@@ -234,7 +234,11 @@
         <div class="row">
           <div class="col-12 text-center">
             <p class="mb-1">ИП Хасанов Андрей Андреевич</p>
-            <p class="mb-0">323300000021625</p>
+            <p class="mb-2">323300000021625</p>
+            <p class="mb-0 small text-muted">
+              Имеются противопоказания. Перед применением проконсультируйтесь со
+              специалистом
+            </p>
           </div>
         </div>
       </div>
