--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <div class="col-12 text-center">
             <p class="mb-1">ИП Хасанов Андрей Андреевич</p>
             <p class="mb-2">323300000021625</p>
-            <p class="mb-0 small text-muted">
+            <p class="mb-0 small text-secondary">
               Имеются противопоказания. Перед применением проконсультируйтесь со
               специалистом
             </p>
