--- a/contacts.html
+++ b/contacts.html
@@ -39,7 +39,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
     />
-    
+
     <style>
       .contact-card {
         transition: all 0.3s ease;
@@ -299,7 +299,11 @@
         <div class="row">
           <div class="col-12 text-center">
             <p class="mb-1">ИП Хасанов Андрей Андреевич</p>
-            <p class="mb-0">323300000021625</p>
+            <p class="mb-2">323300000021625</p>
+            <p class="mb-0 small text-secondary">
+              Имеются противопоказания. Перед применением проконсультируйтесь со
+              специалистом
+            </p>
           </div>
         </div>
       </div>
