--- a/products.html
+++ b/products.html
@@ -22,6 +22,11 @@
       content="https://andrey-beard.github.io/beard-shop/products.html"
     />
 
+    <meta
+      name="keywords"
+      content="Киркланд Сигнатур Миноксидил, Kirkland Signature Minoxidil, Kirkland Minoxidil, Миноксидил, Миноксидил таблетки, Лосьон Миноксидил, Крем Миноксидил, Foam Rogaine, Пена Регейн, Rogaine, Регейн, iiSolutions 15, Lotion iiSolutions 15, Rexagain 10, Lotion Rexagain 10, Капиксил М, Capixyl M, Миноксидил для бороды, Андрей Борода, Андрей Хасанов, Andrey Beard, Andrey Khasanov, Крем Minabeard, Minabeard, Лосьон iiSolutions 15"
+    />
+
     <!-- Гео-метатеги -->
     <meta name="geo.region" content="RU-AST" />
     <meta name="geo.placename" content="Астрахань" />
