--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     />
     <meta
       property="og:description"
-      content="Качественные средства для роста волос и бороды. Minoxidil Kirkland Signature, миноксидил в таблетках, крем и пена. Доставка по России."
+      content="Качественные средства для роста волос и бороды. Kirkland Minoxidil, Капиксил М, Регейн, миноксидил в таблетках, крем и пена. Доставка по России."
     />
     <meta
       property="og:url"
@@ -277,3 +277,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
