--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <!-- SEO-секция-->
     <meta
       name="description"
-      content="Свяжитесь со мной для покупки средств для роста волос. WhatsApp, Telegram, доставка по России. Отзывы покупателей."
+      content="Качественные средства для роста волос и бороды. Kirkland Minoxidil, Капиксил М, Регейн, миноксидил в таблетках, крем и пена. Доставка по России. Свяжитесь со мной для покупки средств для роста волос. WhatsApp, Telegram. Отзывы покупателей."
     />
     <meta property="og:title" content="Контакты и покупка | Андрей Борода" />
     <meta
@@ -316,3 +316,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
