--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
     <!-- SEO-секция-->
     <meta
       name="description"
-      content="Купить Minoxidil Kirkland Signature 5% 60мл и 100мл, миноксидил в таблетках, крем 6%, пену 5%. Оригинальная продукция с доставкой по России."
+      content="Все средства для роста бороды и волос: Kirkland Minoxidil, Капиксил М, Регейн и другие проверенные препараты. Купить Minoxidil Kirkland Signature 5% 60мл и 100мл, миноксидил в таблетках, крем 6%, пену 5%. Оригинальная продукция"
     />
     <meta
       property="og:title"
@@ -166,3 +166,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
